--- a/Views/Auth/ResetPassword.cshtml
+++ b/Views/Auth/ResetPassword.cshtml
@@ -88,20 +88,39 @@
                                     <h5 class="text-white text-start mb-3"><i class="fa fa-key me-2"></i>New Password</h5>
                                 </div>
                                 <div class="col-12">
-                                    <input type="password" class="form-control border-0"
-                                           placeholder="New Password (min 6 characters)"
-                                           name="NewPassword"
-                                           required
-                                           minlength="6"
-                                           style="height: 55px;">
+                                    <div class="input-group">
+                                        <input type="password" class="form-control border-0"
+                                               placeholder="New Password (min 6 characters)"
+                                               name="NewPassword"
+                                               id="ResetNewPassword"
+                                               required minlength="6"
+                                               style="height: 55px;">
+
+                                        <span class="input-group-text bg-white"
+                                              style="cursor:pointer;"
+                                              id="toggleResetNewPassword">
+                                            <i class="fa fa-eye" id="toggleResetNewPasswordIcon"></i>
+                                        </span>
+                                    </div>
                                 </div>
+
                                 <div class="col-12">
-                                    <input type="password" class="form-control border-0"
-                                           placeholder="Confirm New Password"
-                                           name="ConfirmPassword"
-                                           required
-                                           style="height: 55px;">
+                                    <div class="input-group">
+                                        <input type="password" class="form-control border-0"
+                                               placeholder="Confirm New Password"
+                                               name="ConfirmPassword"
+                                               id="ResetConfirmPassword"
+                                               required
+                                               style="height: 55px;">
+
+                                        <span class="input-group-text bg-white"
+                                              style="cursor:pointer;"
+                                              id="toggleResetConfirmPassword">
+                                            <i class="fa fa-eye" id="toggleResetConfirmPasswordIcon"></i>
+                                        </span>
+                                    </div>
                                 </div>
+
 
                                 <div class="col-12 mt-4">
                                     <button class="btn btn-primary w-100 py-3" type="submit">
@@ -138,6 +157,34 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/wow/wow.min.js"></script>
     <script src="~/js/main.js"></script>
+    <script>
+        // New Password Toggle
+        const resetNewPassword = document.getElementById("ResetNewPassword");
+        const toggleResetNewPassword = document.getElementById("toggleResetNewPassword");
+        const toggleResetNewPasswordIcon = document.getElementById("toggleResetNewPasswordIcon");
+
+        toggleResetNewPassword.addEventListener("click", () => {
+            const type = resetNewPassword.getAttribute("type") === "password" ? "text" : "password";
+            resetNewPassword.setAttribute("type", type);
+
+            toggleResetNewPasswordIcon.classList.toggle("fa-eye");
+            toggleResetNewPasswordIcon.classList.toggle("fa-eye-slash");
+        });
+
+        // Confirm Password Toggle
+        const resetConfirmPassword = document.getElementById("ResetConfirmPassword");
+        const toggleResetConfirmPassword = document.getElementById("toggleResetConfirmPassword");
+        const toggleResetConfirmPasswordIcon = document.getElementById("toggleResetConfirmPasswordIcon");
+
+        toggleResetConfirmPassword.addEventListener("click", () => {
+            const type = resetConfirmPassword.getAttribute("type") === "password" ? "text" : "password";
+            resetConfirmPassword.setAttribute("type", type);
+
+            toggleResetConfirmPasswordIcon.classList.toggle("fa-eye");
+            toggleResetConfirmPasswordIcon.classList.toggle("fa-eye-slash");
+        });
+    </script>
+
 </body>
 
 </html>
