--- a/Views/Auth/CustomerLogin.cshtml
+++ b/Views/Auth/CustomerLogin.cshtml
@@ -110,8 +110,17 @@
                                     <input type="email" class="form-control border-0" placeholder="Email Address" name="Email" required style="height: 55px;">
                                 </div>
                                 <div class="col-12">
-                                    <input type="password" class="form-control border-0" placeholder="Password" name="Password" required style="height: 55px;">
+                                    <div class="input-group">
+                                        <input type="password" class="form-control border-0"
+                                               placeholder="Password" name="Password"
+                                               id="CustomerPassword" required style="height: 55px;">
+
+                                        <span class="input-group-text bg-white" style="cursor: pointer;" id="toggleCustomerPassword">
+                                            <i class="fa fa-eye" id="toggleCustomerPasswordIcon"></i>
+                                        </span>
+                                    </div>
                                 </div>
+
                                 <div class="col-12 text-start">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" name="RememberMe" id="rememberMe" value="true">
@@ -146,6 +155,21 @@
     <script src="~/lib/waypoints/waypoints.min.js"></script>
     <script src="~/lib/counterup/counterup.min.js"></script>
     <script src="~/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script>
+        const customerPassword = document.getElementById("CustomerPassword");
+        const toggleCustomerPassword = document.getElementById("toggleCustomerPassword");
+        const toggleCustomerPasswordIcon = document.getElementById("toggleCustomerPasswordIcon");
+
+        toggleCustomerPassword.addEventListener("click", () => {
+            const type = customerPassword.getAttribute("type") === "password" ? "text" : "password";
+            customerPassword.setAttribute("type", type);
+
+            // Toggle icon (eye ↔ eye slash)
+            toggleCustomerPasswordIcon.classList.toggle("fa-eye");
+            toggleCustomerPasswordIcon.classList.toggle("fa-eye-slash");
+        });
+    </script>
+
 
     <!-- Template Javascript -->
     <script src="~/js/main.js"></script>
